--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "ng-block-ui": "^4.0.1",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-angular-query-builder": "^17.0.0",
+    "ngx-clipboard": "^16.0.0",
     "ngx-linky": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
