--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/router-store": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
+    "@perfectmemory/ngx-contextmenu": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/lodash": "^4.17.5",
     "angular2-draggable": "^16.0.0",
@@ -44,6 +45,7 @@
     "ng-multiselect-dropdown": "^1.0.0",
     "ngx-angular-query-builder": "^17.0.0",
     "ngx-clipboard": "^16.0.0",
+    "ngx-cookie": "^6.0.1",
     "ngx-linky": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
