--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/angular": "^31.3.2",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
@@ -28,6 +29,7 @@
     "@perfectmemory/ngx-contextmenu": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/lodash": "^4.17.5",
+    "ag-grid-community": "^31.3.2",
     "angular2-draggable": "^16.0.0",
     "angular2-multiselect-dropdown-ivy": "^1.0.4",
     "bootstrap": "^5.3.2",
@@ -46,7 +48,12 @@
     "ngx-angular-query-builder": "^17.0.0",
     "ngx-clipboard": "^16.0.0",
     "ngx-cookie": "^6.0.1",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-linky": "^4.0.0",
+    "ngx-order-pipe": "^3.0.0",
+    "ngx-popper": "^7.0.0",
+    "ngx-take-until-destroy": "^5.4.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
