--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "private": true,
   "dependencies": {
     "@ag-grid-community/angular": "^31.3.2",
+    "@ag-grid-community/client-side-row-model": "^31.3.2",
+    "@ag-grid-community/core": "^31.3.2",
+    "@ag-grid-community/styles": "^31.3.2",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
