--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/router-store": "^17.2.0",
@@ -40,6 +41,7 @@
     "core-js": "^3.37.1",
     "file-saver": "^2.0.5",
     "http-status-codes": "^2.3.0",
+    "i": "^0.3.7",
     "i18n-iso-countries": "^7.11.2",
     "idx": "^3.0.3",
     "jspdf": "^2.5.1",
@@ -56,6 +58,7 @@
     "ngx-order-pipe": "^3.0.0",
     "ngx-popper": "^7.0.0",
     "ngx-take-until-destroy": "^5.4.0",
+    "npm": "^10.8.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
